@@ -1930,7 +1930,7 @@ static void window_ride_construction_mouseup_demolish(rct_window* w)
     }
 
     auto trackRemoveAction = TrackRemoveAction(
-        _currentTrackPieceType, 0,
+        _currentRideIndex, _currentTrackPieceType, 0,
         { _currentTrackBegin.x, _currentTrackBegin.y, _currentTrackBegin.z, _currentTrackPieceDirection });
 
     trackRemoveAction.SetCallback([=](const GameAction* ga, const GameActions::Result* result) {
